--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,4 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,visualstudiocode,node
 secret.txt
+some.txt
